--- a/requirements.txt
+++ b/requirements.txt
@@ -21,5 +21,7 @@ psycopg2-binary==2.9.9
 email-validator
 python-jose[cryptography]
 apscheduler
-python-multipart
+python-multipart 
+uvicorn[standard]
+
 
